packages/svelte/tests/compiler-errors/samples/invalid-rune-name/_config.js
import { test } from '../../test';

export default test({
	error: {
		code: 'rune_invalid_name',
		message: '`$effect.imnotarune` is not a valid rune'
	}
});
